[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/ui/card/card.gd" type="Script" id=1]
[ext_resource path="res://game/ui/card/bt_bot.png" type="Texture" id=2]
[ext_resource path="res://share/icon/card/felhound.png" type="Texture" id=3]
[ext_resource path="res://game/ui/card/bt_wait_top.png" type="Texture" id=4]
[ext_resource path="res://game/ui/card/bt_ready_top.png" type="Texture" id=5]
[ext_resource path="res://font/noto_sans_display_semibold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://game/ui/card/bt_noise.png" type="Texture" id=7]
[ext_resource path="res://game/ui/card/scanline.png" type="Texture" id=8]
[ext_resource path="res://game/ui/card/bt_ready_bot_frame.png" type="Texture" id=9]
[ext_resource path="res://game/ui/card/unit_cost_gage_bot.png" type="Texture" id=10]
[ext_resource path="res://game/ui/card/unit_cost_gage_top.png" type="Texture" id=11]
[ext_resource path="res://game/ui/card/unit_cost_gage_inside.png" type="Texture" id=12]
[ext_resource path="res://share/icon/card/resource_preloader.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]

size = 48
outline_size = 2
outline_color = Color( 0.329412, 0.329412, 0.329412, 1 )
use_mipmaps = false
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Card" type="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="Base" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "texture" ]

[node name="Icon" type="TextureRect" parent="Base"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "texture" ]

[node name="NotReady" type="TextureRect" parent="Base/Icon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "texture" ]

[node name="Ready" type="TextureRect" parent="Base/Icon"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Cost" type="Label" parent="Base/Icon"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = -11.0
margin_right = 34.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_fonts", "custom_fonts/font" ]

[node name="NotAvailable" type="CPUParticles2D" parent="Base"]
visible = false
light_mask = 32768
position = Vector2( 95, 65 )
emitting = true
amount = 8
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 10.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
local_coords = true
draw_order = 0
texture = ExtResource( 7 )
normalmap = null
emission_shape = 1
emission_sphere_radius = 1.0
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
flag_align_y = false
spread = 45.0
flatness = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
angular_velocity_curve = null
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = null
radial_accel = 2.0
radial_accel_random = 1.0
radial_accel_curve = null
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = null
damping = 0.0
damping_random = 0.0
damping_curve = null
angle = 0.0
angle_random = 0.0
angle_curve = null
scale = 1.0
scale_random = 0.0
scale_curve = null
color = Color( 0.458824, 0.545098, 0.54902, 1 )
color_ramp = null
hue_variation = 0.0
hue_variation_random = 0.0
hue_variation_curve = null
anim_speed = 0.0
anim_speed_random = 0.0
anim_speed_curve = null
anim_offset = 0.0
anim_offset_random = 0.0
anim_offset_curve = null
anim_loop = false
_sections_unfolded = [ "Color", "Drawing", "Emission Shape", "Gravity", "Radial Accel", "Scale", "Time", "Transform", "Visibility", "texture" ]

[node name="Scanline" type="TextureRect" parent="Base"]
modulate = Color( 1, 1, 1, 0.164706 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="Frame" type="TextureRect" parent="Base"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -65.0
margin_right = 95.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "texture" ]

[node name="Button" type="Button" parent="Base"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Energy" type="TextureProgress" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 131.0
margin_right = 190.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 30.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
texture_under = ExtResource( 10 )
texture_over = ExtResource( 11 )
texture_progress = ExtResource( 12 )
tint_under = Color( 1, 1, 1, 1 )
tint_over = Color( 1, 1, 1, 1 )
tint_progress = Color( 1, 1, 1, 1 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ResourcePreloader" parent="." instance=ExtResource( 13 )]

